<resources>
    <string name="app_name">Calculadora Luz</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="kwh">Kwh</string>
    <string name="conta_residencial">Conta residencial</string>
    <string name="conta_comercial">Conta comercial</string>
    <string name="conta_rural">Conta rural</string>
    <string name="incide_icms">Incide ICMS</string>
    <string name="perc_icms">% ICMS</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Resultado:</string>
    <string name="preencha_kwh">Preencha o valor Kwh</string>
</resources>
